; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble.c_btm_ble_create_ll_conn_complete.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble.c_btm_ble_create_ll_conn_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HCI_SUCCESS = common dso_local global i64 0, align 8
@BLE_CONN_IDLE = common dso_local global i32 0, align 4
@HCI_ROLE_UNKNOWN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @btm_ble_create_ll_conn_complete(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @HCI_SUCCESS, align 8
  %5 = icmp ne i64 %3, %4
  br i1 %5, label %6, label %12

6:                                                ; preds = %1
  %7 = load i32, i32* @BLE_CONN_IDLE, align 4
  %8 = call i32 @btm_ble_set_conn_st(i32 %7)
  %9 = load i32, i32* @HCI_ROLE_UNKNOWN, align 4
  %10 = load i64, i64* %2, align 8
  %11 = call i32 @btm_ble_update_mode_operation(i32 %9, i32* null, i64 %10)
  br label %12

12:                                               ; preds = %6, %1
  ret void
}

declare dso_local i32 @btm_ble_set_conn_st(i32) #1

declare dso_local i32 @btm_ble_update_mode_operation(i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
